implemented whoami mob version

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,14 +1,15 @@
 @import './shared';
 @import './header';
 @import './nav';
+@import './whoami';
 
 html {
     // makes text bigger when screen bigger, makes text smaller when screen smaller
     // useful for h1 - p
     font-size: clamp(1rem, 0.75rem + 1.5vw, 2rem);
     // padding: 1rem;
-    margin-left: 1.5rem;
-    margin-right: 1.5rem;
+    margin-left: 1.6rem;
+    margin-right: 1.6rem;
 }
 
 body {
@@ -26,4 +27,10 @@ section {
   width: 100%;
   height: 100vh;
   position: relative;
+}
+
+img {
+    max-inline-size: 100%;
+    block-size: auto;
+    object-fit: cover;
 }
