implemented work tree

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,7 @@
 @import './header';
 @import './nav';
 @import './whoami';
+@import './work_xp';
 
 html {
     // makes text bigger when screen bigger, makes text smaller when screen smaller
