--- a/src/styles/shared.scss
+++ b/src/styles/shared.scss
@@ -28,3 +28,16 @@ section .title {
         color: $color-secondary-text;
     }
 }
+
+@mixin fade-in($time: 2s) {
+    animation: fade-in $time;
+    @keyframes fade-in{
+        0% {
+            opacity: 0;
+        }
+
+        100% {
+            opacity: 1;
+        }
+    }
+}
