--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,7 @@
 @import './nav';
 @import './whoami';
 @import './work_xp';
+@import './projects';
 
 html {
     // makes text bigger when screen bigger, makes text smaller when screen smaller
@@ -26,7 +27,7 @@ body {
 
 section {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   position: relative;
 }
 
