--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -73,21 +73,21 @@
     //     }
     // }
 
-    & .logo {
-        font-weight: 700;
-        padding-top: 2.5rem;
-        // margin-top: calc($nav-item-padding / 2);
-        // float: right;
-        & a {
-            text-decoration: none;
-            color: black;
-            background-color: $color-secondary-text;
-        }
+    // & .logo {
+    //     font-weight: 700;
+    //     padding-top: 2.5rem;
+    //     // margin-top: calc($nav-item-padding / 2);
+    //     // float: right;
+    //     & a {
+    //         text-decoration: none;
+    //         color: black;
+    //         background-color: $color-secondary-text;
+    //     }
 
-        // & .icon {
-        //     font-size: 3rem;
-        // }
-    }
+    //     // & .icon {
+    //     //     font-size: 3rem;
+    //     // }
+    // }
 
     .mob-icon {
         float: right;
