--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -30,7 +30,7 @@
         height: 100%;
         position: absolute;
         top: 0;
-        right: 0;
+        right: -5px;
         z-index: 1;
 
         &::after {
