--- a/src/styles/whoami.scss
+++ b/src/styles/whoami.scss
@@ -4,10 +4,16 @@
     .profile img {
         width: 200px;
         height: 200px;
+        border-radius: $border-radius;
         border: $color-layout solid 4px;
         display: block;
         margin-left: auto;
         margin-right: auto;
+        transition: 0.4s;
+
+        &:hover {
+            @include hover;
+        }
     }
     
     .bio ul {
