--- a/src/styles/shared.scss
+++ b/src/styles/shared.scss
@@ -88,8 +88,8 @@ section {
         padding-top: 2.5rem;
         & a {
             text-decoration: none;
-            color: black;
-            background-color: $color-secondary-text;
+            color: $color-text;
+            background-color: $color-serena;
         }
     }
 }
