--- a/src/styles/art.scss
+++ b/src/styles/art.scss
@@ -4,9 +4,23 @@
 
 .pswp-gallery {
     padding-top: 5px;
+    // css adapted from https://blog.logrocket.com/how-create-responsive-image-gallery-css-flexbox/
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
 
     a {
-        padding: 5px;
+        text-decoration: none;
+        flex-basis: 350px;
+    }
+
+    a img { 
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+        vertical-align: middle;
+        border-radius: 5px;
     }
 }
 
